2012-09-10  Richard Henderson  <rth@redhat.com>

	* config/alpha/predicates.md (small_symbolic_operand): Disallow
	large offsets.

2012-09-10  Georg-Johann Lay  <avr@gjlay.de>

	PR target/54536
	* config/avr/avr-mcus.def (at90usb1287): Set LIBRARY_NAME to "usb1287".

2012-09-10  Jan Hubicka  <jh@suse.cz>

	* lto-cgraph.c (compute_ltrans_boundary): Do not care about aliases.
	* symtab.c (symtab_make_decl_local): Remove user defined visibility
	when making symbol local.

2012-09-09  Mark Kettenis  <kettenis@gnu.org>

	* config/openbsd-stdint.h (INTMAX_TYPE, UINTMAX_TYPE): Define.
			
2012-09-09  Jan Hubicka  <jh@suse.cz>

	* passes.c (ipa_write_summaries_1): Set state;
	do not call compute_ltrans_boundary.
	(ipa_write_optimization_summaries): Likewise.
	(ipa_write_summaries): compute_ltrans_boundary here.
	* lto-streamer.h (lto_symtab_encoder_d): NODES are allocated in heap.
	(compute_ltrans_boundary): Update prototype.

2012-09-09  Ulrich Drepper  <drepper@gmail.com>

	* config/i386/cpuid.h: Define signature_*_e[bcd]x macros for
	matching results of level 0 calls to __cpuid to processor
	manufacturers.
	* config/i386/driver-i386.c (vendor_signatures): Removed.
	(processor_signatures): Removed.
	(host_detect_local_cpu): Replace uses of now-removed SIG_*
	constants with the new signature_*_ebx constants.

2012-09-08  Jan Hubicka  <jh@suse.cz>

	Replace cgraph_node_set and varpool_node_set by symtab_node_encoder
	in partitioning.
	* tree-pass.h (cgraph_node_set_def, varpool_node_set_def): Remove
	forward declaration.
	(lto_symtab_encoder_d): Forward declare.
	(ipa_write_optimization_summaries): Update.
	* lto-cgraph.c (lto_symtab_encoder_new): Do not initialize
	body, initializer and in_partition.
	(lto_symtab_encoder_delete): Update.
	(lto_symtab_encoder_encode): Update.
	(lto_symtab_encoder_lookup): Move inline.
	(lto_symtab_encoder_delete_node): New function.
	(lto_symtab_encoder_encode_body_p, lto_set_symtab_encoder_encode_body,