@@ -1,3 +1,8 @@
+2012-09-10  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/54520
+	* gcc.dg/torture/pr54520.c: New testcase.
+
 2012-09-10  Jason Merrill  <jason@redhat.com>
 
 	PR c++/54506
